@@ -1,3 +1,6 @@
+02-12-2018
+- Fixed Unit group selection action not updating costs
+
 30-10-2018
 - Fixed "+100% Bonus from Helpers" mastery description not updating
 
